--- a/css/global.css
+++ b/css/global.css
@@ -43,9 +43,18 @@ h1 {
 
 .container {
   width: 100%;
-  max-width: 1200px;
+  max-width: 384px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 5rem;
   padding-right: 5rem;
+}
+
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
 }
