--- a/css copy/global.css
+++ b/css copy/global.css
@@ -4,31 +4,18 @@
 @import "./buttons.css";
 @import "./header.css";
 @import "./footer.css";
-body,
-html {
-  height: 100%;
-}
-
-body,
-img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-}
-
 *,
-::after,
-::before {
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 a {
@@ -36,20 +23,17 @@ a {
   text-decoration: none;
 }
 
-ol,
-ul {
+ul,
+ol {
   list-style: none;
 }
 
 img {
   display: flex;
-  -ms-flex-direction: column;
   flex-direction: column;
 }
 
 main {
-  -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
   flex-grow: 1;
 }
 
@@ -67,10 +51,10 @@ h1 {
 }
 
 body {
+  height: 100%;
   display: flex;
-  -ms-flex-direction: column;
   flex-direction: column;
-  font-family: Inter;
+  font-family: "Inter";
   font-style: normal;
   font-weight: 700;
 }
