--- a/css copy/index.css
+++ b/css copy/index.css
@@ -1,17 +1,4 @@
 @import "./global.css";
-.user__github,
-.user__mentor {
-  -webkit-transition: 0.4s;
-  -o-transition: 0.4s;
-}
-
-.user__github:hover,
-.user__linkedin:hover,
-.user__mentor:hover {
-  background-color: #c4f82a;
-  color: #333;
-}
-
 body {
   background-color: #010101;
 }
@@ -25,18 +12,9 @@ body {
 }
 
 .user {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   color: #ffff;
 }
@@ -47,18 +25,11 @@ body {
   border-radius: 50%;
 }
 
-.user__github,
-.user__linkedin,
-.user__mentor {
-  background-color: #333;
-  border-radius: 8px;
-}
-
 .user__name {
   font-size: 2.4rem;
   line-height: 3.6rem;
   font-weight: 600;
-  padding: 2.4rem 0 0.5rem;
+  padding: 2.4rem 0 0.5rem 0;
 }
 
 .user__country {
@@ -68,47 +39,86 @@ body {
   font-weight: 700;
 }
 
-.user__profession,
-.user__social-links a {
-  color: #ffff;
+.user__profession {
   font-size: 1.4rem;
   line-height: 2.1rem;
-}
-
-.user__profession {
+  color: #ffff;
   font-weight: 400;
   padding: 2.4rem 0;
 }
 
 .user__social-links {
-  display: -ms-grid;
   display: grid;
   justify-items: center;
-  -ms-grid-rows: auto 1.6rem auto 1.6rem auto 1.6rem auto 1.6rem auto;
   grid-template-areas: "user__github" "user__mentor" "user__linkedin" "user__twitter" "user__instagram";
-  -ms-grid-columns: 304px;
   grid-template-columns: 304px;
   gap: 1.6rem;
 }
 
 .user__social-links a {
+  color: #ffff;
   font-weight: 700;
   text-align: center;
+  font-size: 1.4rem;
+  line-height: 2.1rem;
 }
 
 .user__github {
+  background-color: #333333;
   padding: 12px 127.5px;
+  border-radius: 8px;
   transition: 0.4s;
+}
+
+.user__github:hover {
+  background-color: #c4f82a;
+  color: #333333;
 }
 
 .user__mentor {
+  background-color: #333333;
   padding: 12px 94.5px;
+  border-radius: 8px;
   transition: 0.4s;
 }
 
+.user__mentor:hover {
+  background-color: #c4f82a;
+  color: #333333;
+}
+
 .user__linkedin {
+  background-color: #333333;
   padding: 12px 122.5px;
-  -webkit-transition: 0.4s;
-  -o-transition: 0.4s;
+  border-radius: 8px;
   transition: 0.4s;
+}
+
+.user__linkedin:hover {
+  background-color: #c4f82a;
+  color: #333333;
+}
+
+.user__twitter {
+  background-color: #333333;
+  padding: 12px 127px;
+  border-radius: 8px;
+  transition: 0.4s;
+}
+
+.user__twitter:hover {
+  background-color: #c4f82a;
+  color: #333333;
+}
+
+.user__instagram {
+  background-color: #333333;
+  padding: 12px 117px;
+  border-radius: 8px;
+  transition: 0.4s;
+}
+
+.user__instagram:hover {
+  background-color: #c4f82a;
+  color: #333333;
 }
